<resources>
    <string name="app_name" translatable="false">LightBrains</string>
    <!--    firstPages-->
    <string name="start">Start</string>
    <string name="sign_in">Sign in</string>
    <string name="continue_in_armenian">Continue in Armenian</string>
    <string name="welcome">Welcome!</string>
    <string name="mental_helps_welcome_page">Let\'s train your brain!</string>
    <string name="email">Email</string>
    <string name="email_is_already_signed_up">Email is already signed up</string>
    <string name="password">Password</string>
    <string name="forget_your_password_retry">Forgot password?</string>
    <string name="i_am_a_new_user">I am a new user</string>
    <string name="name">Username</string>
    <string name="create_account">Create \nAccount</string>
    <string name="check_email">Check your email and verify your sign up</string>
    <string name="check_email_forgot">Check your email</string>
    <string name="reset_my_password">Reset my password</string>
    <string name="email_address_forgot">Email address</string>
    <string name="continue_with_google">Continue with Google</string>


    <string name="enter_password">Enter password</string>
    <string name="enter_strong_password">Enter strong password</string>
    <string name="registration">Registration</string>
    <string name="you_are_offline">You are offline</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_name">Enter name</string>
    <string name="email_or_password_is_incprrect">Email or password are incorrect</string>
    <string name="email_not_veified">Email is not verified</string>
    <string name="password_cant_contain_space">Password can\'t contain space</string>
    <string name="enter_minimum_8_char">Enter minimum 8 char</string>
    <string name="passwords_max_length_is">Password\'s max length is </string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="email_verification_hasnt_been_sent">Email verification hasn\'t been send</string>
    <string name="password_is_wrong">Password is incorrect</string>
    <string name="confirmed">Confirmed!</string>
    <string name="sending_email">Sending email...</string>
    <string name="select_all_necessary_fields">Select all necessary fields</string>
    <string name="repeat_password">Repeat password</string>
    <string name="this_password_is_different">This password is different from the password above</string>
    <string name="user_already_exists">A user with such email already exists</string>
    <string name="email_is_invalid">Email is invalid</string>
    <string name="tv_guest_info">Use the following details to login to the app \n\n</string>
    <string name="user_is_already_signed_in">The user is already signed in</string>
    <string name="sign_in_from_other_device">Sign in from other device</string>


    <string name="let_s_count_together">Let\'s count together!</string>
    <string name="how_is_your_memory">How is your memory?</string>


    <string name="speed">Speed</string>
    <string name="digits">Digits</string>
    <string name="quantity">Count of examples</string>
    <string name="number_of_rows">Number of rows:</string>


    <string name="flash_anzan">Flash anzan</string>
    <string name="flash_cards">Flash cards</string>

    <string name="game_1">Game 1</string>
    <string name="attention_game">Attention game</string>
    <string name="game_2">Game 2</string>


    <string name="lets_go">Let\'s go!</string>
    <string name="answer">Answer</string>
    <string name="your_answer_is_right">Right</string>
    <string name="your_answer_is_wrong">Answer is wrong</string>
    <string name="next">Next</string>
    <string name="restart">Restart</string>
    <string name="stop">Stop</string>
    <string name="finish">Finish</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    //firebase
    <string name="do_you_really_want_to_exit">Do you really want to exit?</string>
    <string name="do_you_really_want_to_delete_your_account">Do you really want to delete your account?</string>
    <string name="deleted">Deleted</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_topic_name">Direct count</string>


    <string name="time">Time</string>
    <string name="all">All</string>
    <string name="minus">Minus</string>
    <string name="plus">Plus</string>

    <string name="topic">Topic</string>
    <string name="subtopic">Subtopic</string>
    <string name="direct_count">Direct count</string>
    <string name="junior_comrades">Junior comrades</string>
    <string name="senior_comrades">Senior comrades</string>
    <string name="mix_formulas">Mix formulas</string>
    <string name="confirm">Confirm</string>
    <string name="complexity">Complexity</string>

    <string name="figures">Figures</string>
    <string name="variety_of_figures">Variety of figures</string>
    <string name="install_manually">Install manually</string>
    <string name="number_of_following_figures">Number of following figures: </string>
    <string name="str_continue">Continue</string>
    <string name="great">Great</string>
    <string name="minutes">minutes</string>
    <string name="scores">Scores</string>
    <string name="scores2">Scores։ </string>
    <string name="are_you_ready">Are you ready?</string>
    <string name="string_att_game_info">Count number of figures appearing on the screen and then write them in appropriate place.</string>
    <string name="rules">Rules</string>
    <string name="are_you_attentive">Are you attentive?</string>
    <string name="language">Language</string>
    <string name="log_out">Log out</string>
    <string name="did_you_remember">Did you remember?</string>
    <string name="check">Check</string>
    <string name="quantity_of_figure">Quantity of а figure</string>
    <string name="enter_password_to_make_changes">Enter password to make changes</string>
    <string name="cancel">Cancel</string>
    <string name="delete_account">Delete account</string>
    <string name="we_are_still_working_on_this_part">We are still working on this part...!</string>
    <string name="wait_a_little">Wait a little...</string>
    <string name="results">Results</string>
    <string name="go_back_main_page">Go back to main page</string>
    <string name="excellent">Excellent!</string>
    <string name="settings">Settings</string>
    <string name="sounds_on_off">Sound effects</string>
    <string name="guest">Guest</string>
    <string name="top_10_leaders">Top 10 leaders</string>
    <string name="use_internet_to_be_always_online">Use internet</string>
    <string name="memory_game">Matching game</string>
    <string name="count_of_columns">Count of columns and rows</string>
    <string name="count_of_rows">Count of rows</string>
    <string name="bonus">Bonus +1</string>
    <string name="complicate">Complicate( Work in progress...)</string>
    <string name="seconds">sec.</string>
    <string name="you_have_finished">You have finished</string>
    <string name="try_again">Try again</string>
    <string name="time_is_over">Time is over</string>


    <string name="random">Random</string>
    <string name="count_of_steps">Count of steps</string>


    <string-array name="string_languages_array">
        <item>Русский</item>
        <item>Հայերեն</item>
        <item>English</item>
    </string-array>

    <string-array name="string_complexity_array">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <string-array name="string_figures_array">
        <item>Geometric figures</item>
        <item>Fruits and vegetables</item>
        <item>Animals</item>
    </string-array>


    <string-array name="string_list_speeds">
        <item>0.1 sec</item>
        <item>0.3 sec</item>
        <item>0.5 sec</item>
        <item>0.7 sec</item>
        <item>1 sec</item>
        <item>1.3 sec</item>
        <item>1.7 sec</item>
        <item>2 sec</item>
        <item>2.2 sec</item>
        <item>2.5 sec</item>
        <item>3 sec</item>
        <item>3.2 sec</item>
        <item>3.5 sec</item>
        <item>4 sec</item>
        <item>4.5 sec</item>
        <item>5 sec</item>
    </string-array>

    <string-array name="string_list_mental_topics">
        <item>Direct count</item>
        <item>Junior comrades</item>
        <item>Senior comrades</item>
        <item>Mix formulas</item>
    </string-array>

    <string-array name="string_list_digits">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>


    <string-array name="string_list_mental_subtopics_direct_count">
        <item>Direct count</item>

    </string-array>

    <string-array name="string_list_mental_subtopics_junior_comrades">
        <item>+4</item>
        <item>-4</item>
        <item>+3</item>
        <item>-3</item>
        <item>+2</item>
        <item>-2</item>
        <item>+1</item>
        <item>-1</item>
        <item>@string/all</item>

    </string-array>

    <string-array name="string_list_mental_subtopics_senior_comrades">

        <item>+9</item>
        <item>+8</item>
        <item>+7</item>
        <item>+6</item>
        <item>+5</item>
        <item>+4</item>
        <item>+3</item>
        <item>+2</item>
        <item>+1</item>

        <item>-9</item>
        <item>-8</item>
        <item>-7</item>
        <item>-6</item>
        <item>-5</item>
        <item>-4</item>
        <item>-3</item>
        <item>-2</item>
        <item>-1</item>

        <item>@string/all</item>
        <item>@string/minus</item>
        <item>@string/plus</item>
    </string-array>

    <string-array name="string_list_mental_subtopics_mix_formulas">
        <item>+6</item>
        <item>-6</item>
        <item>+7</item>
        <item>-7</item>
        <item>+8</item>
        <item>-8</item>
        <item>+9</item>
        <item>-9</item>
        <item>@string/all</item>

    </string-array>


</resources>