<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_lay_figures"
        style="@style/MyStyleForTextInputLayoutSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/figures"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/green_dark"
        app:hintTextColor="@color/green_dark">

        <AutoCompleteTextView
            android:id="@+id/auto_tv_figures"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_lay_figures_count"
        style="@style/MyStyleForTextInputLayoutSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/variety_of_figures"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/green_dark"
        app:hintTextColor="@color/green_dark">


        <AutoCompleteTextView
            android:id="@+id/auto_tv_figures_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/my_font"
        android:text="@string/time"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progressTint="@color/green"
        android:scaleY="1"
        android:stepSize="1"
        android:thumbTint="@color/green_dark"
        android:valueFrom="3"
        android:valueTo="15"
        app:haloColor="@color/green"
        app:labelBehavior="gone"
        app:thumbColor="@color/green_dark"
        app:tickColor="@color/green_dark"
        app:trackColor="@color/green"
        android:soundEffectsEnabled="true"/>


    <TextView
        android:id="@+id/tv_figure_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/my_font"
        android:text="@string/number_of_following_figures"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        />
    <com.google.android.material.slider.Slider
        android:id="@+id/slider_figure_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progressTint="@color/green"
        android:scaleY="1"
        android:stepSize="1"
        android:thumbTint="@color/green_dark"
        android:valueFrom="3"
        android:valueTo="20"
        app:haloColor="@color/green"
        app:labelBehavior="gone"
        app:thumbColor="@color/green_dark"
        app:tickColor="@color/green_dark"
        app:trackColor="@color/green"
        android:soundEffectsEnabled="true"/>


</LinearLayout>