<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_lay_name"
        style="@style/MyStyleForTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:boxBackgroundMode="outline"
        app:endIconMode="clear_text"
        app:endIconTint="@color/purple_500"
        app:startIconDrawable="@drawable/ic_round_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_name"
            style="@style/MyStyleForEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textPersonName" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_lay_mail"
        style="@style/MyStyleForTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:boxBackgroundMode="outline"
        app:endIconMode="clear_text"
        app:endIconTint="@color/purple_500"
        app:startIconDrawable="@drawable/ic_round_attach_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_mail"
            style="@style/MyStyleForEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textWebEmailAddress" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_lay_password"
        style="@style/MyStyleForTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:boxBackgroundMode="outline"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:helperText="Enter strong password"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/green_dark"
        app:startIconDrawable="@drawable/ic_round_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            style="@style/MyStyleForEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textWebPassword" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>