<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".part_second.attention_game.AttentionGameSettingsFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="18dp"
            android:paddingEnd="16dp"
            android:paddingBottom="32dp">

            <androidx.appcompat.widget.AppCompatCheckedTextView
                android:id="@+id/checkbox_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green"
                android:checked="false"
                android:clickable="true"
                android:drawableEnd="@drawable/round_drop_down"
                android:drawableTint="@color/green_dark"
                android:fontFamily="@font/my_font"
                android:gravity="center"
                android:padding="16dp"
                android:paddingBottom="0dp"
                android:text="@string/rules"
                android:textColor="@color/black"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/tv_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green"
                android:fontFamily="@font/my_font"
                android:gravity="center"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:text="@string/string_att_game_info"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_lay_complexity"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/complexity"
                app:boxStrokeColor="@color/green_dark"
                app:hintTextColor="@color/green_dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <AutoCompleteTextView
                    android:id="@+id/auto_tv_complexity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/complexity"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/tv_lay_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_minus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/green_dark"
                    android:text="-"
                    android:textSize="24sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/quantity"
                    android:textColorHint="@color/green_dark"
                    app:hintTextColor="@color/green_dark"
                    app:boxStrokeColor="@color/green_dark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/auto_tv_count_of_figure_groups"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:editable="false"
                        android:enabled="true"
                        android:inputType="none"
                        android:text="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_plus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/green_dark"
                    android:text="+"
                    android:textSize="24sp" />


            </LinearLayout>


            <CheckBox
                android:id="@+id/check_box_define_myslf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:buttonTint="@color/green_dark"
                android:text="@string/install_manually"
                android:textColor="@color/black" />

            <FrameLayout
                android:id="@+id/included_layout_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:visibility="gone">

                <include
                    android:id="@+id/included_layout"
                    layout="@layout/attention_game_settings_additional_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@id/my_guide_line_for_title_image_home"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </FrameLayout>

            <Button
                android:id="@+id/btn_lets_go"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/green_dark"
                android:padding="16dp"
                android:text="@string/lets_go"
                android:textAllCaps="false" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>