<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".homepage.SettingsFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:scaleType="fitEnd"
        android:src="@drawable/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/sounds_switch" />

    <TextView
        android:id="@+id/tv_settings"
        style="@style/MyStyleForTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/settings"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/sounds_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:thumbTint="@color/switch_thumb_selector"
        android:trackTint="@color/switch_track_selector"
        app:layout_constraintStart_toStartOf="@id/tv_settings"
        app:layout_constraintTop_toBottomOf="@id/tv_settings"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/sounds_on_off"
        android:textColor="@color/color_secondary_variant"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/sounds_switch"
        app:layout_constraintStart_toEndOf="@id/sounds_switch"
        app:layout_constraintTop_toTopOf="@id/sounds_switch" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_lay_languages"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/language"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/color_secondary_variant"
        app:hintTextColor="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sounds_switch"
        app:startIconDrawable="@drawable/round_language_24"
        app:startIconTint="@color/purple_500">

        <AutoCompleteTextView
            android:id="@+id/auto_tv_languages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>